--- a/.github/workflows/run-cognitive-tests.yml
+++ b/.github/workflows/run-cognitive-tests.yml
@@ -29,7 +29,7 @@ jobs:
           pnpm bp login
       - name: Run Cognitive Tests
         run: |
-          bot_id=$(pnpm bp bots new --name "cognitive-tests" --if-not-exists --json | jq ".id")
+          bot_id=$(pnpm bp bots new --name "cognitive-tests" --if-not-exists --json | jq -r ".id")
 
           export CLOUD_API_ENDPOINT='https://api.botpress.dev'
           export CLOUD_BOT_ID=$bot_id
