--- a/.github/workflows/run-checks.yml
+++ b/.github/workflows/run-checks.yml
@@ -15,6 +15,8 @@ jobs:
     timeout-minutes: 15
     env:
       NODE_OPTIONS: '--max_old_space_size=8192'
+      # force turborepo not to cache, because we are using the same runner for all jobs, across different OSes :
+      TURBO_FORCE: 'true'
 
     steps:
       - uses: actions/checkout@v2
