--- a/integrations/chat/package.json
+++ b/integrations/chat/package.json
@@ -17,7 +17,7 @@
     "lodash": "^4.17.21",
     "qs": "^6.11.0",
     "uuid": "^9.0.0",
-    "zod": "npm:@botpress/sdk@workspace:*"
+    "zod": "npm:@botpress/sdk"
   },
   "devDependencies": {
     "@botpress/chat-api": "workspace:*",
