--- a/.github/workflows/run-cli-tests.yml
+++ b/.github/workflows/run-cli-tests.yml
@@ -10,7 +10,7 @@ permissions:
 
 jobs:
   run-cli-tests:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     timeout-minutes: 15
     env:
       NODE_OPTIONS: '--max_old_space_size=8192'
@@ -26,5 +26,6 @@ jobs:
             --workspace-id ${{ secrets.STAGING_E2E_TESTS_WORKSPACE_ID }} \
             --workspace-handle clitests \
             --token ${{ secrets.STAGING_TOKEN_CLOUD_OPS_ACCOUNT }} \
-            --sdk-path "$(pwd)/packages/sdk" \
-            --client-path "$(pwd)/packages/client"
+            --sdk-path "$(pwd)\packages\sdk" \
+            --client-path "$(pwd)\packages\client"
+        shell: bash
