--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -19,9 +19,9 @@ runs:
         check-latest: true
 
     - name: Install dependencies
-      shell: bash
+      shell: ${{ runner.os == 'Windows' && 'pwsh' || 'bash' }}
       run: pnpm i --frozen-lockfile
 
     - name: Build
-      shell: bash
+      shell: ${{ runner.os == 'Windows' && 'pwsh' || 'bash' }}
       run: pnpm build ${{ inputs.extra_filters }}
