--- a/bots/hit-looper/package.json
+++ b/bots/hit-looper/package.json
@@ -16,6 +16,7 @@
     "@botpress/common": "workspace:*",
     "@botpresshub/telegram": "workspace:*",
     "@botpresshub/zendesk": "workspace:*",
+    "@botpresshub/hitl-plugin": "workspace:*",
     "@bpinternal/genenv": "0.0.1"
   },
   "bpDependencies": {
