--- a/bots/hit-looper/package.json
+++ b/bots/hit-looper/package.json
@@ -14,13 +14,13 @@
   "devDependencies": {
     "@botpress/cli": "workspace:*",
     "@botpress/common": "workspace:*",
+    "@botpresshub/chat": "workspace:*",
     "@botpresshub/hitl-plugin": "workspace:*",
-    "@botpresshub/telegram": "workspace:*",
     "@botpresshub/zendesk": "workspace:*",
     "@bpinternal/genenv": "0.0.1"
   },
   "bpDependencies": {
-    "telegram": "../../integrations/telegram",
+    "chat": "../../integrations/chat",
     "zendesk": "../../integrations/zendesk",
     "hitl": "../../plugins/hitl"
   }
