--- a/integrations/dropbox/package.json
+++ b/integrations/dropbox/package.json
@@ -6,8 +6,8 @@
     "dropbox": "^10.34.0"
   },
   "devDependencies": {
-    "@types/node": "^22.10.5",
-    "typescript": "^5.6.3"
+    "@botpress/cli": "workspace:*",
+    "@botpress/client": "workspace:*"
   },
   "private": true,
   "scripts": {
