fix(build): add missing lib

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -61,7 +61,8 @@
     "@types/uuid": "^9.0.1",
     "find-process": "^1.4.7",
     "glob": "^9.3.4",
-    "tmp": "^0.2.1"
+    "tmp": "^0.2.1",
+    "ts-node": "^10.9.2"
   },
   "engines": {
     "node": ">=18"
