--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "esbuild": "^0.16.12",
+    "ts-node": "^10.9.2",
     "tsup": "^8.0.2"
   },
   "peerDependencies": {
