--- a/bots/hit-looper/package.json
+++ b/bots/hit-looper/package.json
@@ -14,12 +14,14 @@
   "devDependencies": {
     "@botpress/cli": "workspace:*",
     "@botpress/common": "workspace:*",
-    "@botpresshub/telegram": "workspace:*",
+    "@botpresshub/chat": "workspace:*",
+    "@botpresshub/hitl-plugin": "workspace:*",
     "@botpresshub/zendesk": "workspace:*",
     "@bpinternal/genenv": "0.0.1"
   },
   "bpDependencies": {
-    "telegram": "../../integrations/telegram",
-    "zendesk": "../../integrations/zendesk"
+    "chat": "../../integrations/chat",
+    "zendesk": "../../integrations/zendesk",
+    "hitl": "../../plugins/hitl"
   }
 }
