--- a/integrations/dropbox/tsconfig.json
+++ b/integrations/dropbox/tsconfig.json
@@ -2,7 +2,9 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "baseUrl": ".",
-    "outDir": "dist"
+    "outDir": "dist",
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true
   },
   "include": [".botpress/**/*", "src/**/*", "integration.definition.ts", "definitions/**/*"]
 }
