--- a/integrations/dropbox/package.json
+++ b/integrations/dropbox/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@botpresshub/dropbox",
   "dependencies": {
-    "@botpress/client": "workspace:*",
     "@botpress/common": "workspace:*",
     "@botpress/sdk": "workspace:*",
+    "@botpress/sdk-addons": "workspace:*",
     "dropbox": "^10.34.0"
   },
   "devDependencies": {
