--- a/integrations/dropbox/package.json
+++ b/integrations/dropbox/package.json
@@ -7,7 +7,8 @@
     "dropbox": "^10.34.0"
   },
   "devDependencies": {
-    "@botpress/cli": "workspace:*"
+    "@botpress/cli": "workspace:*",
+    "@sentry/cli": "^2.39.1"
   },
   "private": true,
   "scripts": {
