--- a/packages/vai/package.json
+++ b/packages/vai/package.json
@@ -11,7 +11,8 @@
     }
   },
   "scripts": {
-    "build": "npm run build:types && npm run build:neutral",
+    "check:type": "tsc --noEmit",
+    "build": "bp add -y && pnpm run build:types && pnpm run build:neutral",
     "build:neutral": "esbuild src/**/*.ts src/*.ts --platform=neutral --outdir=dist",
     "build:types": "tsup",
     "watch": "tsup --watch",
@@ -33,13 +34,17 @@
     "@types/lodash": "^4.14.191",
     "dotenv": "^16.4.4",
     "esbuild": "^0.16.12",
-    "tsup": "^8.0.2"
+    "tsup": "^8.0.2",
+    "@botpresshub/llm": "workspace:*"
   },
   "peerDependencies": {
-    "@botpress/client": "^0.41.0",
+    "@botpress/client": "0.41.0",
     "@bpinternal/thicktoken": "^1.0.1",
     "@bpinternal/zui": "^0.13.4",
     "lodash": "^4.17.21",
     "vitest": "^2 || ^3 || ^4 || ^5"
+  },
+  "bpDependencies": {
+    "llm": "../../interfaces/llm"
   }
 }
