--- a/packages/vai/package.json
+++ b/packages/vai/package.json
@@ -31,11 +31,11 @@
     "jsonrepair": "^3.10.0"
   },
   "devDependencies": {
+    "@botpresshub/llm": "workspace:*",
     "@types/lodash": "^4.14.191",
     "dotenv": "^16.4.4",
     "esbuild": "^0.16.12",
-    "tsup": "^8.0.2",
-    "@botpresshub/llm": "workspace:*"
+    "tsup": "^8.0.2"
   },
   "peerDependencies": {
     "@botpress/client": "0.41.0",
