--- a/packages/vai/tsconfig.json
+++ b/packages/vai/tsconfig.json
@@ -4,5 +4,14 @@
     "strict": false
   },
   "exclude": ["node_modules", "dist"],
-  "include": ["src/**/*", "vitest.d.ts"]
+  "include": [
+    "src/**/*",
+    "vitest.d.ts",
+    "e2e/check.test.ts",
+    "e2e/extract.test.ts",
+    "e2e/filter.test.ts",
+    "e2e/rate.test.ts",
+    "e2e/setEvaluator.test.ts",
+    "e2e/compare.test.ts"
+  ]
 }
