--- a/packages/vai/package.json
+++ b/packages/vai/package.json
@@ -16,9 +16,9 @@
     "build:neutral": "esbuild src/**/*.ts src/*.ts --platform=neutral --outdir=dist",
     "build:types": "tsup",
     "watch": "tsup --watch",
-    "test": "vitest run --config vitest.config.ts",
-    "test:update": "vitest -u run --config vitest.config.ts",
-    "test:watch": "vitest --config vitest.config.ts",
+    "test:e2e": "vitest run --config vitest.config.ts",
+    "test:e2e:update": "vitest -u run --config vitest.config.ts",
+    "test:e2e:watch": "vitest --config vitest.config.ts",
     "build-with-latest-models": "pnpm run update-types && pnpm run update-models && pnpm run build",
     "update-models": "ts-node ./src/scripts/update-models.ts",
     "update-types": "ts-node ./src/scripts/update-types.ts"
