--- a/packages/vai/package.json
+++ b/packages/vai/package.json
@@ -13,7 +13,7 @@
   "scripts": {
     "check:type": "tsc --noEmit",
     "build": "bp add -y && pnpm run build:types && pnpm run build:neutral",
-    "build:neutral": "esbuild src/**/*.ts src/*.ts --platform=neutral --outdir=dist",
+    "build:neutral": "ts-node -T ./build.ts",
     "build:types": "tsup",
     "watch": "tsup --watch",
     "test:e2e": "vitest run --config vitest.config.ts",
@@ -35,6 +35,7 @@
     "@types/lodash": "^4.14.191",
     "dotenv": "^16.4.4",
     "esbuild": "^0.16.12",
+    "glob": "^9.3.4",
     "tsup": "^8.0.2"
   },
   "peerDependencies": {
