--- a/packages/zai/package.json
+++ b/packages/zai/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "check:type": "tsc --noEmit",
     "build": "bp add -y && pnpm run build:types && pnpm run build:neutral",
-    "build:neutral": "esbuild src/**/*.ts src/*.ts --platform=neutral --outdir=dist",
+    "build:neutral": "ts-node -T ./build.ts",
     "build:types": "tsup",
     "watch": "tsup --watch",
     "test:e2e": "vitest run --config vitest.config.ts",
@@ -36,6 +36,7 @@
     "@types/lodash-es": "^4.17.12",
     "dotenv": "^16.4.4",
     "esbuild": "^0.16.12",
+    "glob": "^9.3.4",
     "lodash": "^4.17.21",
     "tsup": "^8.0.2"
   },
