--- a/packages/zai/package.json
+++ b/packages/zai/package.json
@@ -17,10 +17,7 @@
     "watch": "tsup --watch",
     "test:e2e": "vitest run --config vitest.config.ts",
     "test:e2e:update": "vitest -u run --config vitest.config.ts",
-    "test:e2e:watch": "vitest --config vitest.config.ts",
-    "build-with-latest-models": "pnpm run update-types && pnpm run update-models && pnpm run build",
-    "update-models": "ts-node ./scripts/update-models.mts",
-    "update-types": "ts-node ./scripts/update-types.mts"
+    "test:e2e:watch": "vitest --config vitest.config.ts"
   },
   "keywords": [],
   "author": "",
