--- a/packages/cognitive/tsconfig.json
+++ b/packages/cognitive/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "baseUrl": "."
+    "baseUrl": ".",
+    "strict": false
   },
   "include": ["src/**/*", "./e2e/**/*"]
 }
