--- a/packages/cognitive/package.json
+++ b/packages/cognitive/package.json
@@ -10,7 +10,7 @@
     "check:type": "tsc --noEmit",
     "build:type": "tsup --tsconfig tsconfig.build.json ./src/index.ts --dts-resolve --dts-only --clean",
     "build:neutral": "ts-node -T ./build.ts --neutral",
-    "build": "pnpm bp add -y && pnpm build:type && pnpm build:neutral && size-limit",
+    "build": "pnpm build:type && pnpm build:neutral && size-limit",
     "test:e2e": "vitest run --dir ./e2e"
   },
   "size-limit": [
@@ -29,7 +29,7 @@
   },
   "devDependencies": {
     "@botpress/client": "workspace:*",
-    "@botpresshub/llm": "workspace:*",
+    "@botpress/common": "workspace:*",
     "@bpinternal/zui": "0.13.5",
     "@size-limit/file": "^11.1.6",
     "@types/axios": "^0.14.4",
@@ -39,8 +39,5 @@
     "esbuild": "^0.16.12",
     "size-limit": "^11.1.6",
     "tsup": "^8.0.2"
-  },
-  "bpDependencies": {
-    "llm": "../../interfaces/llm"
   }
 }
