chore: publish zai and vai when merging

--- a/.github/workflows/publish-packages.yml
+++ b/.github/workflows/publish-packages.yml
@@ -48,3 +48,13 @@ jobs:
         with:
           path: './packages/cognitive'
           token: '${{ secrets.NPM_ACCESS_TOKEN }}'
+      - name: Publish Vai
+        uses: botpress/gh-actions/publish-if-not-exists@master
+        with:
+          path: './packages/vai'
+          token: '${{ secrets.NPM_ACCESS_TOKEN }}'
+      - name: Publish Zai
+        uses: botpress/gh-actions/publish-if-not-exists@master
+        with:
+          path: './packages/vai'
+          token: '${{ secrets.NPM_ACCESS_TOKEN }}'
