--- a/integrations/messenger/package.json
+++ b/integrations/messenger/package.json
@@ -14,6 +14,7 @@
     "@botpress/sdk-addons": "workspace:*",
     "@slack/web-api": "^6.8.0",
     "axios": "^1.6.2",
+    "marked": "^13.0.2",
     "messaging-api-messenger": "^1.1.0",
     "preact": "^10.23.1",
     "preact-render-to-string": "^6.5.7",
