--- a/integrations/whatsapp/package.json
+++ b/integrations/whatsapp/package.json
@@ -15,9 +15,9 @@
     "axios": "^1.6.2",
     "preact": "^10.23.1",
     "preact-render-to-string": "^6.5.7",
+    "marked": "^13.0.2",
     "query-string": "^6.14.1",
-    "whatsapp-api-js": "^1.0.5",
-    "marked": "^13.0.2"
+    "whatsapp-api-js": "^1.0.5"
   },
   "devDependencies": {
     "@botpress/cli": "workspace:*",
