feat(ci): dry-run integration deployment in PRs

--- a/.github/workflows/deploy-integrations-staging.yml
+++ b/.github/workflows/deploy-integrations-staging.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - master
+  pull_request:
+    paths: 'integrations/**'
 
   workflow_dispatch:
     inputs:
@@ -36,6 +38,7 @@ jobs:
         with:
           environment: 'staging'
           force: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.force == 'true' }}
+          dry_run: ${{ github.event_name == 'pull_request' }}
           sentry_auth_token: ${{ secrets.SENTRY_AUTH_TOKEN }}
           token_cloud_ops_account: ${{ secrets.STAGING_TOKEN_CLOUD_OPS_ACCOUNT }}
           cloud_ops_workspace_id: ${{ secrets.STAGING_CLOUD_OPS_WORKSPACE_ID }}
