--- a/.github/workflows/deploy-integrations-staging.yml
+++ b/.github/workflows/deploy-integrations-staging.yml
@@ -6,7 +6,8 @@ on:
       - master
 
   pull_request:
-    paths: 'integrations/**'
+    branches:
+      - master
 
   workflow_dispatch:
     inputs:
