--- a/.github/workflows/deploy-integrations-staging.yml
+++ b/.github/workflows/deploy-integrations-staging.yml
@@ -6,8 +6,7 @@ on:
       - master
 
   pull_request:
-    branches:
-      - master
+    paths: 'integrations/**'
 
   workflow_dispatch:
     inputs:
