--- a/.github/workflows/deploy-integrations-staging.yml
+++ b/.github/workflows/deploy-integrations-staging.yml
@@ -32,14 +32,14 @@ jobs:
         if: ${{ github.event_name != 'pull_request' }}
         with:
           environment: 'staging'
-          force: ${{ github.event.inputs.force == 'true' }}
+          force: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.force == 'true' }}
           token_cloud_ops_account: ${{ secrets.STAGING_TOKEN_CLOUD_OPS_ACCOUNT }}
           cloud_ops_workspace_id: ${{ secrets.STAGING_CLOUD_OPS_WORKSPACE_ID }}
       - name: Deploy Integrations
         uses: ./.github/actions/deploy-integrations
         with:
           environment: 'staging'
-          force: ${{ github.event.inputs.force == 'true' }}
+          force: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.force == 'true' }}
           dry_run: ${{ github.event_name == 'pull_request' }}
           sentry_auth_token: ${{ secrets.SENTRY_AUTH_TOKEN }}
           token_cloud_ops_account: ${{ secrets.STAGING_TOKEN_CLOUD_OPS_ACCOUNT }}
@@ -70,6 +70,6 @@ jobs:
         if: ${{ github.event_name != 'pull_request' }}
         with:
           environment: 'staging'
-          force: ${{ github.event.inputs.force == 'true' }}
+          force: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.force == 'true' }}
           token_cloud_ops_account: ${{ secrets.STAGING_TOKEN_CLOUD_OPS_ACCOUNT }}
           cloud_ops_workspace_id: ${{ secrets.STAGING_CLOUD_OPS_WORKSPACE_ID }}
