Revert "chore(client): updated package version to 0.43.0"
This reverts commit 6f51eb5996bd62bb4aff1b46d6801d5cd8885909.

--- a/packages/zai/package.json
+++ b/packages/zai/package.json
@@ -28,6 +28,7 @@
     "lodash-es": "^4.17.21"
   },
   "devDependencies": {
+    "@botpress/common": "workspace:*",
     "@botpress/vai": "workspace:*",
     "@types/lodash-es": "^4.17.12",
     "dotenv": "^16.4.4",
