--- a/packages/vai/package.json
+++ b/packages/vai/package.json
@@ -28,6 +28,7 @@
     "jsonrepair": "^3.10.0"
   },
   "devDependencies": {
+    "@botpress/common": "workspace:*",
     "@types/lodash": "^4.14.191",
     "dotenv": "^16.4.4",
     "esbuild": "^0.16.12",
