--- a/integrations/whatsapp/package.json
+++ b/integrations/whatsapp/package.json
@@ -13,6 +13,7 @@
     "@botpress/sdk-addons": "workspace:*",
     "@segment/analytics-node": "^2.2.0",
     "axios": "^1.6.2",
+    "marked": "^13.0.2",
     "preact": "^10.23.1",
     "preact-render-to-string": "^6.5.7",
     "query-string": "^6.14.1",
