--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,8 @@
     "target": "ES2017",
     "strict": true,
     "jsx": "preserve",
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     "noUncheckedIndexedAccess": true,
     "allowSyntheticDefaultImports": true,
     "lib": ["dom", "ESNext", "dom.iterable"],
@@ -17,7 +17,8 @@
     "forceConsistentCasingInFileNames": true,
     "noEmit": false,
     "resolveJsonModule": true,
-    "isolatedModules": true
+    "isolatedModules": true,
+    "noErrorTruncation": true
   },
   "exclude": ["node_modules", "dist"],
   "include": ["src/**/*", "vitest.d.ts"],
