--- a/packages/chat-client/package.json
+++ b/packages/chat-client/package.json
@@ -23,6 +23,7 @@
     "jsonwebtoken": "^9.0.2",
     "qs": "^6.11.0",
     "type-fest": "^3.4.0",
+    "verror": "^1.10.1",
     "zod": "^3.21.4"
   },
   "devDependencies": {
@@ -34,6 +35,7 @@
     "@types/lodash": "^4.14.191",
     "@types/qs": "^6.9.7",
     "@types/uuid": "^9.0.1",
+    "@types/verror": "^1.10.6",
     "@types/web": "^0.0.115",
     "esbuild": "^0.16.12",
     "esbuild-plugin-polyfill-node": "^0.3.0",
