--- a/integrations/notion/package.json
+++ b/integrations/notion/package.json
@@ -10,7 +10,8 @@
     "@botpress/client": "workspace:*",
     "@botpress/sdk": "workspace:*",
     "@botpress/sdk-addons": "workspace:*",
-    "@notionhq/client": "^2.2.16"
+    "@notionhq/client": "^2.2.16",
+    "notion-to-md": "^3.1.6"
   },
   "devDependencies": {
     "@botpress/cli": "workspace:*",
